# nebula

./: .env.example  .firebaserc  .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT.md  LEARNING.md  Makefile  README.md  RUNBOOK.md  docker-compose.yml  firebase.json
.claude/agents/: story-worker.md
.claude/skills/wave/: SKILL.md
.github/: PROBE.txt  REVIEW.md
.github/scripts/: check-review-liveness.sh  test-check-review-liveness.sh
.github/workflows/: ci.yml  deploy.yml  review-rerun.yml  review-shadow.yml  review.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  budget.py  config.py  genai_retry.py  llm.py  main.py  mcp_server.py  ratelimit.py
backend/app/agents/: README.md
backend/app/agents/assistant/: __init__.py  acquisitions.py  agent.py  backfill.py  chat.py  classification.py  memory.py  merge.py  proposal_diff.py  proposals.py  reconcile.py  resolution.py  schema_tools.py  service.py  tidy_hq.py
backend/app/agents/deals/: build.py  models.py  proposals.py  research.py  thesis_revision.py
backend/app/agents/discovery/: __init__.py  dedup.py  discovery.py  extract.py  hostpick.py  profile.py  search.py
backend/app/agents/enrichment/: __init__.py  agent.py  enrich.py
backend/app/agents/ma/: __init__.py  build.py  models.py  proposals.py  research.py
backend/app/agents/people/: build.py  models.py  person_discovery.py  person_identity.py  proposals.py  research.py
backend/app/api/: routes.py
backend/app/capture/: __init__.py  dates.py  feeds.py  job.py  news.py  people.py  sections.py
backend/app/graph/: README.md  acquirers.py  acquisitions.py  cache.py  company_names.py  company_types.py  deal_models.py  digest.py  driver.py  entity_resolution.py  field_edit.py  jobs.py  linkedin.py  models.py  person_discovery.py  person_enrichment.py  person_expertise.py  person_identity.py  person_models.py  queries.py  refresh.py  repair_mojibake.py  repository.py  retention.py  sanitize.py  schedules.py  schema.py  signals.py  thesis.py
backend/app/importer/: csv_import.py  extract.py
backend/app/tools/: encoding.py  field_extract.py  graph_query_tools.py  graph_tools.py  social.py  web.py
backend/data/: README.md
backend/evals/: dataset.py  judge.py  run_eval.py
backend/scripts/: normalize_linkedin.py
backend/tests/: test_acquirers.py  test_acquirers_graph.py  test_acquisition_proposal_job.py  test_acquisition_proposals_list.py  test_acquisitions.py  test_acquisitions_graph.py  test_agent.py  test_assistant.py  test_assistant_acquisitions.py  test_auth.py  test_backfill.py  test_backfill_scope.py  test_backlog.py  test_backlog_research.py  test_budget.py  test_cache.py  test_cache_sanitize.py  test_canonical_validators.py  test_capture.py  test_capture_people.py  test_check_names.py  test_classification.py  test_company_names_graph.py  test_digest.py  test_discovery.py  test_encoding.py  test_entity_resolution.py  test_eval.py  test_field_edit.py  test_field_edit_api.py  test_field_edit_graph.py  test_field_extract.py  test_graph_upsert.py  test_health.py  test_importer.py  test_jobs.py  test_llm.py  test_mcp_enrich.py  test_merge.py  test_neighbourhood.py  (+33 more)
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: AcquisitionProposals.tsx  AcquisitionsSection.tsx  ActivityPanel.tsx  App.css  App.tsx  AuthGate.tsx  BackfillReview.tsx  BacklogPanel.tsx  BatchReview.tsx  ChatPanel.tsx  ClientClassification.tsx  CompaniesPage.tsx  CompanyDrawer.tsx  CompanyTable.tsx  DigestPanel.tsx  DiscoveryPanel.tsx  EntityResolution.tsx  Fields.tsx  FilterBar.tsx  GraphView.tsx  MAPage.tsx  MergeCard.tsx  Page.tsx  PersonDrawer.tsx  PersonProposalCard.tsx  PotentialAcquirers.tsx  ProposalCard.tsx  QueuePanel.tsx  ReviewInbox.tsx  Sidebar.tsx  SignalCaptureButton.tsx  SignalTimeline.tsx  SignalsSection.tsx  ThesisPanel.tsx  ThesisRevisionReview.tsx  WhatsNew.tsx  acquirerReasons.test.ts  acquirerReasons.ts  api.ts  columnOrder.test.ts  (+20 more)
scripts/: .gitignore  check_names.py  code_health.html  code_health.py  drift.py  install-hooks.sh  wave_serve.py  wave_status.html  wave_status.py  wave_tag.sh
