[project]
name = "nebula-backend"
version = "0.1.0"
description = "Nebula — agentic research graph: FastAPI backend + ADK research agents over Neo4j"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.26.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "google-adk>=1.25.0",
    "ddgs>=9.14.4",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "requests>=2.34.2",
    "mcp>=1.28.1",
    "google-cloud-tasks>=2.23.0",
    "firebase-admin>=7.5.0",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pytest-cov>=7.1.0",
    "diff-cover>=10.3.0",
    "mutmut>=3.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.uv]
package = false

# --- Test-quality sensors (#106) ---------------------------------------------
# Coverage config drives the CI diff-coverage gate (pytest --cov=app produces
# coverage.xml; diff-cover fails PRs whose CHANGED lines fall below threshold).
# See .github/workflows/ci.yml. Kept self-contained so parallel stories editing
# other [tool.*] tables in this file merge cleanly.
[tool.coverage.run]
source = ["app"]
branch = true
relative_files = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

# Mutation testing is a per-wave sensor (NOT wired into CI). `make mutate
# FILES="app/foo.py ..."` scopes the run to the wave's touched files; mutmut 3.x
# mutates everything under source_paths but the make target passes per-file name
# globs so only those mutants are executed. See the wave skill's closeout note.
[tool.mutmut]
source_paths = ["app"]
do_not_mutate = ["*/tests/*", "tests/*"]
# mutmut runs the suite inside a copied tree; the tests import the sibling
# `evals` package, which isn't under source_paths, so copy it alongside.
also_copy = ["evals"]
# mutmut runs the suite from a copied `mutants/` subtree, so tests that resolve
# repo-root paths (subprocess selftests of scripts/) can't find their targets.
# Skip those few — they exercise tooling, not app/ logic under mutation.
pytest_add_cli_args = ["--ignore=tests/test_check_names.py", "--ignore=tests/test_eval.py"]
