[project]
name = "nebula-backend"
version = "0.1.0"
description = "Nebula — agentic research graph: FastAPI backend + ADK research agents over Neo4j"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "neo4j>=5.26.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "google-adk>=1.25.0",
    "ddgs>=9.14.4",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "requests>=2.34.2",
    "mcp>=1.28.1",
    "google-cloud-tasks>=2.23.0",
    "firebase-admin>=7.5.0",
    "defusedxml>=0.7.1",
    "resvg-py>=0.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pytest-cov>=7.1.0",
    "diff-cover>=10.3.0",
    "mutmut>=3.6.0",
    "import-linter>=2.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

# Ruff lint rules (story #103): the base E/F set PLUS sensors aimed at the failure
# modes agent-written code drifts into — runaway complexity (C901), over-long
# signatures/bodies (PLR09xx), latent bugs (bugbear B), and non-idiomatic branches
# (SIM). Thresholds below are deliberately generous: they flag genuine outliers, not
# ordinary functions.
#
# SUPPRESSION POLICY: a `# noqa: <rule>` is allowed ONLY with a trailing reason
# comment saying WHY (e.g. `# noqa: C901 — dispatch table, irreducible`). Prefer a
# small mechanical refactor to a suppression; reach for `# noqa` only when a refactor
# would be riskier than the smell it hides. A bare `# noqa` (no rule, no reason) is
# not acceptable.
[tool.ruff.lint]
extend-select = ["C901", "B", "SIM", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

# --- Layering sensor: import-linter (story #103) ------------------------------
# Encodes the INTENDED (entity-first) architecture as a layered contract, so a
# stray upward import fails `make lint` (`lint-imports`) instead of quietly rotting
# the layering. The lattice, top (may import anything below) to bottom:
#
#   main                              app entrypoint / router wiring
#   api | mcp_server | importer       surfaces (independent — no cross-imports)
#   agents.assistant                  orchestration (above the entity domains)
#   agents.{discovery,enrichment,     entity domains + the signals capture pipeline.
#     deals,people} | capture           Target taxonomy (amendment): companies
#                                        (= discovery+enrichment, operation-named
#                                        aliases grandfathered), people, deals,
#                                        signals (= capture). Migrates incrementally.
#   tools                             research toolkit (uses the graph-backed cache)
#   graph                             Neo4j read/write + committable record models
#   genai_retry                       quota/backoff wrapper (over budget + ratelimit)
#   auth | budget | ratelimit         foundation helpers (each depends only on config)
#   config                            settings — the base
#
# KNOWN exceptions are pinned BY NAME in `ignore_imports` below with a reason; they
# are lazy imports (dispatch tables / a cross-domain reach) that don't form real
# module-load cycles. Fixing them means finishing the entity-domain migration, not
# loosening the contract.
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Layered architecture (foundation < graph < tools < domains < surfaces)"
type = "layers"
layers = [
    "app.main",
    "app.api | app.mcp_server | app.importer",
    "app.agents.assistant",
    "app.agents.discovery | app.agents.enrichment | app.agents.deals | app.agents.people | app.capture",
    "app.tools",
    "app.graph",
    "app.genai_retry",
    "app.auth | app.budget | app.ratelimit",
    "app.config",
]
ignore_imports = [
    # graph/jobs.py is the durable-job DISPATCH TABLE: on a Cloud Tasks callback it
    # lazily imports the one runner for the job kind. The runners legitimately live
    # ABOVE graph (they orchestrate agents/capture); the import is inside the
    # dispatch function, so there is no import-time cycle.
    "app.graph.jobs -> app.agents.assistant.proposals",
    "app.graph.jobs -> app.agents.assistant.backfill",
    "app.graph.jobs -> app.agents.assistant.resolution",
    "app.graph.jobs -> app.agents.assistant.classification",
    "app.graph.jobs -> app.agents.discovery.discovery",
    "app.graph.jobs -> app.agents.people.proposals",
    "app.graph.jobs -> app.agents.deals.proposals",
    "app.graph.jobs -> app.agents.deals.thesis_revision",
    "app.graph.jobs -> app.capture.job",
    "app.graph.jobs -> app.capture.news",
    # discovery's runner lazily calls the assistant proposal builder to turn a
    # discovered company into a review proposal — a cross-package reach within the
    # agents area, imported inside the function (no load-time cycle). Resolves when
    # discovery folds into the `companies` domain and the shared propose step moves.
    "app.agents.discovery.discovery -> app.agents.assistant.proposals",
    # NOTE (#183): the three write-path pins that used to sit here — graph.repository,
    # graph.person_enrichment and capture.people reaching UP into
    # `agents.people.person_identity` for `canonical_linkedin`/`attach_linkedin` — are
    # DELETED, not moved. The pure identity key now lives in `app.graph.linkedin` and
    # the record models canonicalise it in a pydantic validator (the single choke
    # point), so the write paths receive pre-canonicalised URLs; `attach_linkedin`
    # (pure Cypher) moved to `app.graph.person_enrichment`. `person_identity`
    # re-exports both for the discovery domain, so no import direction is reversed.
]

[tool.uv]
package = false

# --- Test-quality sensors (#106) ---------------------------------------------
# Coverage config drives the CI diff-coverage gate (pytest --cov=app produces
# coverage.xml; diff-cover fails PRs whose CHANGED lines fall below threshold).
# See .github/workflows/ci.yml. Kept self-contained so parallel stories editing
# other [tool.*] tables in this file merge cleanly.
[tool.coverage.run]
source = ["app"]
branch = true
relative_files = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

# Mutation testing is a per-wave sensor (NOT wired into CI). `make mutate
# FILES="app/foo.py ..."` scopes the run to the wave's touched files; mutmut 3.x
# mutates everything under source_paths but the make target passes per-file name
# globs so only those mutants are executed. See the wave skill's closeout note.
[tool.mutmut]
source_paths = ["app"]
do_not_mutate = ["*/tests/*", "tests/*"]
# mutmut runs the suite inside a copied tree; the tests import the sibling
# `evals` package, which isn't under source_paths, so copy it alongside.
also_copy = ["evals"]
# mutmut runs the suite from a copied `mutants/` subtree, so tests that resolve
# repo-root paths (subprocess selftests of scripts/) can't find their targets.
# Skip those few — they exercise tooling, not app/ logic under mutation.
pytest_add_cli_args = ["--ignore=tests/test_check_names.py", "--ignore=tests/test_eval.py"]
